<resources>
    <string name="app_name">TZ</string>
    <string name="title_activity_home">HomeActivity</string>
    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>
    <string name="nav_header_title">Android Studio</string>
    <string name="nav_header_subtitle">android.studio@android.com</string>
    <string name="nav_header_desc">Navigation header</string>
    <string name="action_settings">Settings</string>

    <string name="menu_home">Home</string>
    <string name="my_gigs">My Gigs</string>
    <string name="menu_slideshow">Slideshow</string>
    <string name="title_home">Home</string>
    <string name="title_sell">Sell</string>
    <string name="title_buy">Buy</string>
    <string name="chat">Chat</string>
    <string name="setting">Setting</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="title_activity_home_activitys">HomeActivitys</string>
    <string name="title_activity_home_sec">HomeActivitySec</string>
    <string name="title_activity_main_home">MainHomeActivity</string>
    <string name="title_activity_abcd">AbcdActivity</string>
    <string name="title_activity_nav">NavActivity</string>
    <string name="gigDetial">Gig Detail</string>
</resources>