<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android">

    <item
        android:id="@+id/navigation_home"
        android:icon="@drawable/ic_home_black_24dp"
        android:title="@string/title_home" />

    <item
        android:id="@+id/navigation_sell"
        android:icon="@drawable/sell"
        android:title="@string/title_sell" />

    <item
        android:id="@+id/navigation_buy"
        android:icon="@drawable/ic_shopping_cart"
        android:title="@string/title_buy" />
    <item
        android:id="@+id/allUsersFragment"
        android:icon="@drawable/ic_chat"
        android:title="@string/chat" />
    <item
        android:id="@+id/navigation_setting"
        android:icon="@drawable/ic_settings"
        android:title="@string/setting" />

</menu>